<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateGame"
    android:paddingVertical="40sp"
    android:paddingHorizontal="40sp"
    >



    <TextView
        android:id="@+id/textView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/game_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:bufferType="normal"
        android:ems="10"/>

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/game_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:bufferType="normal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team1"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/TeamA_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team2"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/TeamB_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sections"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="4"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bonus"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:bufferType="normal"
        android:ems="10"
        android:text="5"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_number"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/player_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:bufferType="normal"
        android:ems="10"
        android:text="5"
        android:inputType="number" />

    <Button
        android:id="@+id/commit_btn"
        android:onClick="create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game" />

</LinearLayout>