<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameCounter">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="第"
            android:textColor="#110101"
            android:textSize="30dp">


        </TextView>

        <TextView
            android:id="@+id/cur_section"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1"
            android:textColor="#110101"
            android:textSize="30dp">

        </TextView>
        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="节"
            android:textColor="#110101"
            android:textSize="30dp">


        </TextView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TeamA_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Team1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/foul_num_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="left"

                android:text="0"
                android:textColor="#F44336"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/isBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="left"
                android:text=""
                android:textColor="#F44336"
                android:textSize="30sp" />

            <Button
                android:id="@+id/threeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/three_point" />

            <Button
                android:id="@+id/twoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/two_point" />

            <Button
                android:id="@+id/oneA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:onClick="click"
                android:text="@string/one_point" />

            <Button
                android:id="@+id/foulA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:onClick="click"
                android:text="@string/foul" />

        </LinearLayout>

        <View
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#737071" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TeamB_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Team2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/foul_num_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="left"

                android:text="0"
                android:textColor="#F44336"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/BisBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="left"
                android:text=""
                android:textColor="#F44336"
                android:textSize="30sp" />

            <Button
                android:id="@+id/threeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/three_point" />

            <Button
                android:id="@+id/twoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="click"
                android:text="@string/two_point" />

            <Button
                android:id="@+id/oneB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:onClick="click"
                android:text="@string/one_point" />

            <Button
                android:id="@+id/foulB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:onClick="click"
                android:text="@string/foul" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/round_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="本节结束" />

        <Button
            android:id="@+id/game_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="全场结束" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>